<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pocket Vedas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_about">About</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="menu_add_bookmark">Add bookmark</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="bookmark_description">Bookmark description</string>
    <string name="bookmark_type">Bookmark type</string>
    <string name="dynamic">Dynamic</string>
    <string name="menu_settings">Settings</string>
    <string name="no_matches">No matches found</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="content_title">Content</string>
    <string name="display_title">Display</string>
    <string name="pref_keep_awake">Keep awake</string>
    <string name="pref_keep_awake_summary">Stop the display from switching off automatically</string>
    <string name="pref_purport">Display Purport</string>
    <string name="pref_purport_summary">Include the purport with each verse</string>
    <string name="pref_zoom">Text size</string>
    <string name="pref_zoom_summary">Adjust the size of the text</string>
    <string name="pref_reverse">Black on White</string>
    <string name="pref_reverse_summary">Display the text in black on a white background</string>
    <string name="pref_synonyms">Display Synonyms</string>
    <string name="pref_synonyms_summary">Include the synonyms with each verse</string>
    <string name="pref_text">Display Text</string>
    <string name="pref_text_summary">Include the original text with each verse</string>
    <string name="pref_translation">Display Translation</string>
    <string name="pref_translation_summary">Include the translation with each verse</string>
    <string name="search_hint">Search Pocket Vedas</string>
    <string name="title_activity_about">About Pocket Vedas</string>
    <string name="title_activity_bookmarks">Pocket Vedas</string>
    <string name="title_activity_books">Pocket Vedas</string>
    <string name="title_activity_reading">Pocket Vedas</string>
    <string name="title_activity_search">Search Pocket Vedas</string>
    <string name="title_activity_settings">Settings</string>
</resources>
